--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,19 @@ description = ""
 authors = ["georgii <novgosh@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "~3.8"
-jax = {extras = ["cpu"], version = "^0.2.20"}
-flax = "^0.3.2"
-click = "^8.0.1"
-pandas = "^1.3.3"
-tensorflow = "^2.6.0"
+python = ">=3.8"
+jax = {extras = ["cpu"], version = ">=0.2.20"}
+flax = ">=0.3.2"
+click = ">=8.0.1"
+pandas = ">=1.3.3"
+tensorflow = ">=2.6.0"
 numpy = ">=1.19"
-tqdm = "^4.62.3"
-tensorboardX = "^2.4"
+tqdm = ">=4.62.3"
+tensorboardX = ">=2.4"
 
 [tool.poetry.dev-dependencies]
-jupyter = "^1.0.0"
-tensorboard = "^2.4.1"
+jupyter = ">=1.0.0"
+tensorboard = ">=2.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
