--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["georgii <novgosh@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-jax = {extras = ["cpu"], version = ">=0.2.20"}
-flax = ">=0.3.2"
+jax = {extras = ["cpu"], version = "==0.2.20"}
+flax = "==0.3.2"
 click = ">=8.0.1"
 pandas = ">=1.3.3"
 tensorflow = ">=2.6.0"
