--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,25 @@
-[tool.poetry]
+[project]
 name = "ttde"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
-authors = ["georgii <novgosh@gmail.com>"]
-
-[tool.poetry.dependencies]
-python = ">=3.8"
-jax = {extras = ["cpu"], version = "==0.2.20"}
-flax = "==0.3.2"
-click = ">=8.0.1"
-pandas = ">=1.3.3"
-tensorflow = ">=2.6.0"
-numpy = ">=1.19"
-tqdm = ">=4.62.3"
-tensorboardX = ">=2.4"
-
-[tool.poetry.dev-dependencies]
-jupyter = ">=1.0.0"
-tensorboard = ">=2.4.1"
+authors = [
+    {name = "PG_LoLo", email = "novgosh@yandex.ru"},
+]
+dependencies = [
+    "numpy==1.24.2",
+    "tqdm==4.65.0",
+    "wandb==0.14.0",
+    "jax==0.4.8",
+    "flax==0.6.8",
+    "opt-einsum==3.3.0",
+    "h5py==3.8.0",
+    "pandas==1.5.3",
+]
+requires-python = ">=3.9"
+license = {text = "MIT"}
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-pep517>=1.0.0"]
+build-backend = "pdm.pep517.api"
+
+[tool.pdm]
